[gd_scene load_steps=6 format=3 uid="uid://cmd50b3yqkodr"]

[ext_resource type="Script" uid="uid://d3hu0oxvok14u" path="res://00_Game/Scripts/CollectionUI.gd" id="1_cr5am"]
[ext_resource type="PackedScene" uid="uid://du3668e3d13to" path="res://00_Game/Scenes/InventorySlot.tscn" id="2_attbi"]
[ext_resource type="PackedScene" uid="uid://cgifbjnovga4e" path="res://00_Game/Scenes/CharacterDetailPopup.tscn" id="3_ub6kk"]
[ext_resource type="PackedScene" uid="uid://b0eslqmomf7lw" path="res://00_Game/Scenes/HeroSlot.tscn" id="4_qa5h6"]
[ext_resource type="Resource" uid="uid://bb5sh3d2c6k6c" path="res://00_Game/Resources/Characters/Fire_Warrior.tres" id="5_0xqoh"]

[node name="CollectionUI" type="Control" node_paths=PackedStringArray("grid_container", "btn_back", "character_popup")]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cr5am")
slot_template = ExtResource("2_attbi")
popup_scene = ExtResource("3_ub6kk")
grid_container = NodePath("MarginContainer/ScrollContainer/Grid")
btn_back = NodePath("BtnBack")
character_popup = NodePath("CharacterDetailPopup")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.13863751, 0.13863748, 0.13863748, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="HeroSlot" parent="MarginContainer/ScrollContainer/Grid" instance=ExtResource("4_qa5h6")]
visible = false
layout_mode = 2
slot_data = ExtResource("5_0xqoh")

[node name="HeroSlot2" parent="MarginContainer/ScrollContainer/Grid" instance=ExtResource("4_qa5h6")]
visible = false
layout_mode = 2

[node name="HeroSlot3" parent="MarginContainer/ScrollContainer/Grid" instance=ExtResource("4_qa5h6")]
visible = false
layout_mode = 2

[node name="HeroSlot4" parent="MarginContainer/ScrollContainer/Grid" instance=ExtResource("4_qa5h6")]
visible = false
layout_mode = 2

[node name="BtnBack" type="Button" parent="."]
layout_mode = 1
offset_left = 44.0
offset_top = 34.0
offset_right = 140.0
offset_bottom = 82.0
text = "< Geri"

[node name="CharacterDetailPopup" parent="." instance=ExtResource("3_ub6kk")]
layout_mode = 1

[connection signal="hero_selected" from="MarginContainer/ScrollContainer/Grid/HeroSlot" to="." method="_on_hero_slot_hero_selected"]
